made and styled header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
 
 <body>
 
+    <div class="wrapper">
+        <div class="resume">
+            <div class="resume__header section-padding">
+                <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
+                <div class="resume__header-text">
+                    <h1>Mateusz Jabłoński</h1>
+                    <div class="resume__header-text-contact">
+                        <p><i class="fa-solid fa-phone"></i>500-085-918</p>
+                        <p><i class="fa-solid fa-envelope"></i>mateusz.jablonski@op.pl</p>
+                        <p><i class="fa-solid fa-location-dot"></i>Łódź, Polska</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
