added common class, started new section, changed divs for section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="wrapper">
         <div class="resume">
-            <div class="resume__header section-padding">
+            <section class="resume__header section-padding">
                 <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
                 <div class="resume__header-text">
                     <h1>Mateusz Jabłoński</h1>
@@ -27,7 +27,10 @@
                         <p><i class="fa-solid fa-location-dot"></i>Łódź, Polska</p>
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="resume__experience section-padding">
+                <h2 class="section-title">doświadczenie</h2>
+            </section>
         </div>
     </div>
 
