addes experience section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,25 @@
             </section>
             <section class="resume__experience section-padding">
                 <h2 class="section-title">doświadczenie</h2>
-            </section>
+                <div class="resume__experience-box">
+                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Rossmann
+                        SDP. </p>
+                    <p class="resume__experience-date">2019.10 - obecnie</p>
+                    <p>Jestem pracownikiem Działu Rewizji
+                        Wewnętrznej. Administruję systemy alarmowe oraz
+                        przeciwpożarowe. Dbam o ich poprawne działanie, nadzorowanie stanu i wdrażanie nowych
+                        narzędzi poprawiających ich procesy. Służę wsparciem dla pracowników firmy przy codziennej
+                        obsłudze programów oraz stale współpracuję z działem IT i Logistyką.</p>
+                </div>
+                <div class="resume__experience-box">
+                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer</p>
+                    <p class="resume__experience-date">2017.10 - 2019.01</p>
+                    <p>Byłem odpowiedzialny za kompleksową obsługę klienta detalicznego, prowadzennie zespołu i wyznaczanie celów sprzedażowych.</p>
+                </div>
         </div>
+    </div>
+    </section>
+    </div>
     </div>
 
 </body>
