education section, changed its padding

--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
                 <div class="resume__experience-box">
                     <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer</p>
                     <p class="resume__experience-date">2017.10 - 2019.01</p>
-                    <p>Byłem odpowiedzialny za kompleksową obsługę klienta detalicznego, prowadzennie zespołu i wyznaczanie celów sprzedażowych.</p>
+                    <p>Byłem odpowiedzialny za kompleksową obsługę klienta detalicznego, prowadzennie zespołu i
+                        wyznaczanie celów sprzedażowych.</p>
                 </div>
+            </section>
+            <section class="resume__education section-padding">
+                <h2 class="section-title">wykształcenie</h2>
+                <div class="resume__education-box">
+                    <p class="resume__education-school"><i class="fa-solid fa-graduation-cap"></i>Mundurowe Liceum
+                        Ogólnokształcące</p>
+                    <p class="resume__education-date">2019.10 - obecnie</p>
+                </div>
+            </section>
         </div>
-    </div>
-    </section>
-    </div>
     </div>
 
 </body>
