--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                     <p class="resume__education-date">2019.10 - obecnie</p>
                 </div>
             </section>
+            <section class="resume__skills section-padding">
+                <h2 class="section-title">umiejętności</h2>
+                
+            </section>
         </div>
     </div>
 
