--- a/index.html
+++ b/index.html
@@ -57,7 +57,70 @@
             </section>
             <section class="resume__skills section-padding">
                 <h2 class="section-title">umiejętności</h2>
-                
+                <div class="resume__skills-container">
+                    <div class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/code-dots.svg" alt="">
+                            <h4>HTML, CSS</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Swobodnie posługuje się HTML i CSS. Metody DRY, RWD czy pojęcia takie jak Flex, GRID,
+                                BootStrap, SASS, BEM są mi dobrze znane.</p>
+                        </div>
+                    </div>
+                    <div class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/code.svg" alt="">
+                            <h4>JavaScript</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Mam podstawową znajomość JavaScript, która pozwala mi tworzyć skrypty i dodać
+                                funkcjonalności na stronie internetowej.</p>
+                        </div>
+                    </div>
+                    <div class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/robot.svg" alt="">
+                            <h4>AI</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Dzięki odpowiednim promptom mogę zoptymalizować swoją pracę przy użyciu AI. Od
+                                generowania treści, korektę tekstu lub kodu po automatyzacje niektórych zadań.</p>
+                        </div>
+                    </div>
+                    <div class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <h4>Praca zespołowa</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Dobrze odnajduje się w pracy zesołowej. Uważam, że wymiana opinii grupy osób pozwala
+                                osiągnąć
+                                najlepsze efekty dla danego projektu.</p>
+                        </div>
+                    </div>
+                    <div class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/message-circle.svg" alt="">
+                            <h4>Komunikacja<h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Jestem osobą otwartą i łatwo nawiązującą kontakty z innymi. Co sprawia, że czuję się
+                                swobodnie zarówno w interakcjach z klientami, jak i w codziennej współpracy z zespołem.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <h4>Rozwiązywanie problemów</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Nie szukam problemów, szukam rozwiązań. Problemy to integralna część każdej pracy.
+                                Dlatego tak ważne jest by umieć sobie z nimi radzić i szukać alternatywnych rozwiązań.
+                            </p>
+                        </div>
+                    </div>
             </section>
         </div>
     </div>
