interests section, change its section-padding class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="resume__education-box">
                     <p class="resume__education-school"><i class="fa-solid fa-graduation-cap"></i>Mundurowe Liceum
                         Ogólnokształcące</p>
-                    <p class="resume__education-date">2019.10 - obecnie</p>
+                    <p class="resume__education-date">2014 - 2017</p>
                 </div>
             </section>
             <section class="resume__skills section-padding">
@@ -121,6 +121,27 @@
                             </p>
                         </div>
                     </div>
+            </section>
+            <section class="resume__interests section-padding">
+                <h2 class="section-title">zainteresowania</h2>
+                <div class="resume__interests-container">
+                    <div class="resume__interests-box">
+                        <img src="/img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <p>Gry komputerowe</p>
+                    </div>
+                    <div class="resume__interests-box">
+                        <img src="/img/icons/mountain.svg" alt="">
+                        <p>Wspinaczka skałkowa</p>
+                    </div>
+                    <div class="resume__interests-box">
+                        <img src="/img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                        <p>Rynki finansowe</p>
+                    </div>
+                    <div class="resume__interests-box">
+                        <img src="/img/icons/tank.svg" alt="">
+                        <p>Militaria</p>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
