put skills above education, skills now are ul list

--- a/index.html
+++ b/index.html
@@ -47,15 +47,69 @@
                         wyznaczanie celów sprzedażowych.</p>
                 </div>
             </section>
-            <section class="resume__education section-padding">
-                <h2 class="section-title">wykształcenie</h2>
-                <div class="resume__education-box">
-                    <p class="resume__education-school"><i class="fa-solid fa-graduation-cap"></i>Mundurowe Liceum
-                        Ogólnokształcące</p>
-                    <p class="resume__education-date">2014 - 2017</p>
-                </div>
-            </section>
             <section class="resume__skills section-padding">
+                <h2 class="section-title">Umiejętności</h2>
+                <ul class="resume__skills-list"">
+                    <li class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/code-dots.svg" alt="">
+                            <h4>HTML, CSS</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Swobodnie posługuję się HTML i CSS. Metody DRY, RWD oraz pojęcia takie jak Flex, GRID,
+                                BootStrap, SASS, BEM są mi dobrze znane.</p>
+                        </div>
+                    </li>
+                    <li class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/code.svg" alt="">
+                            <h4>JavaScript</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Mam podstawową znajomość JavaScript, która pozwala mi tworzyć skrypty i dodawać
+                                funkcjonalności na stronach internetowych.</p>
+                        </div>
+                    </li>
+                    <li class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/robot.svg" alt="">
+                            <h4>AI</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Optymalizuję pracę przy użyciu AI, od generowania treści po automatyzację zadań.</p>
+                        </div>
+                    </li>
+                    <li class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <h4>Praca zespołowa</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Doskonale odnajduję się w pracy zespołowej. Współpraca pozwala osiągnąć najlepsze efekty.</p>
+                        </div>
+                    </li>
+                    <li class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/message-circle.svg" alt="">
+                            <h4>Komunikacja</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Jestem osobą otwartą, łatwo nawiązującą kontakty z innymi, co ułatwia codzienną współpracę.</p>
+                        </div>
+                    </li>
+                    <li class="resume__skills-box">
+                        <div class="resume__skills-box-title">
+                            <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                            <h4>Rozwiązywanie problemów</h4>
+                        </div>
+                        <div class="resume__skills-box-text">
+                            <p>Skupiam się na rozwiązaniach, zamiast na problemach, szukając alternatywnych opcji.</p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+            
+            <!-- <section class="resume__skills section-padding">
                 <h2 class="section-title">umiejętności</h2>
                 <div class="resume__skills-container">
                     <div class="resume__skills-box">
@@ -64,7 +118,7 @@
                             <h4>HTML, CSS</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Swobodnie posługuje się HTML i CSS. Metody DRY, RWD czy pojęcia takie jak Flex, GRID,
+                            <p>Swobodnie posługuje się HTML i CSS. Dbam o czystość kodu i jego odpowiedniąstrukturę. Metody DRY, RWD czy pojęcia takie jak Flex, GRID,
                                 BootStrap, SASS, BEM są mi dobrze znane.</p>
                         </div>
                     </div>
@@ -121,7 +175,16 @@
                             </p>
                         </div>
                     </div>
+            </section> -->
+            <section class="resume__education section-padding">
+                <h2 class="section-title">wykształcenie</h2>
+                <div class="resume__education-box">
+                    <p class="resume__education-school"><i class="fa-solid fa-graduation-cap"></i>Mundurowe Liceum
+                        Ogólnokształcące</p>
+                    <p class="resume__education-date">2014 - 2017</p>
+                </div>
             </section>
+            
             <section class="resume__interests section-padding">
                 <h2 class="section-title">zainteresowania</h2>
                 <div class="resume__interests-container">
