--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
                 <h2 class="section-title">doświadczenie</h2>
                 <div class="resume__experience-box">
                     <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Rossmann
-                        SDP. </p>
+                        SDP. - Pracownik Działu Wewnętrznego Rewizji </p>
                     <p class="resume__experience-date">2019.10 - obecnie</p>
-                    <p>Jestem pracownikiem Działu Rewizji
-                        Wewnętrznej. Administruję systemy alarmowe oraz
-                        przeciwpożarowe. Dbam o ich poprawne działanie, nadzorowanie stanu i wdrażanie nowych
-                        narzędzi poprawiających ich procesy. Służę wsparciem dla pracowników firmy przy codziennej
-                        obsłudze programów oraz stale współpracuję z działem IT i Logistyką.</p>
+                    <ul>
+                        <li>Administrowanie systemami alarmowymi, optymalizacja działania i wdrażanie narzędzi do usprawniania procesów.</li>
+                        <li>Realizacja projektów informatycznych oraz logistycznych we spółpracy z innymi działami w celu rozwoju systemów.</li>
+                        <li>Bieżący kontakt z dostawcami usług i firmami serwisowymi</li>
+                        <li>Szkolenie pracowników w obsłudze programów i systemów.</li>
+                    </ul>
                 </div>
                 <div class="resume__experience-box">
-                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer</p>
+                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer - Doradca Klienta </p>
                     <p class="resume__experience-date">2017.10 - 2019.01</p>
-                    <p>Byłem odpowiedzialny za kompleksową obsługę klienta detalicznego, prowadzennie zespołu i
-                        wyznaczanie celów sprzedażowych.</p>
                 </div>
             </section>
             <section class="resume__skills section-padding">
@@ -108,74 +107,6 @@
                     </li>
                 </ul>
             </section>
-            
-            <!-- <section class="resume__skills section-padding">
-                <h2 class="section-title">umiejętności</h2>
-                <div class="resume__skills-container">
-                    <div class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/code-dots.svg" alt="">
-                            <h4>HTML, CSS</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Swobodnie posługuje się HTML i CSS. Dbam o czystość kodu i jego odpowiedniąstrukturę. Metody DRY, RWD czy pojęcia takie jak Flex, GRID,
-                                BootStrap, SASS, BEM są mi dobrze znane.</p>
-                        </div>
-                    </div>
-                    <div class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/code.svg" alt="">
-                            <h4>JavaScript</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Mam podstawową znajomość JavaScript, która pozwala mi tworzyć skrypty i dodać
-                                funkcjonalności na stronie internetowej.</p>
-                        </div>
-                    </div>
-                    <div class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/robot.svg" alt="">
-                            <h4>AI</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Dzięki odpowiednim promptom mogę zoptymalizować swoją pracę przy użyciu AI. Od
-                                generowania treści, korektę tekstu lub kodu po automatyzacje niektórych zadań.</p>
-                        </div>
-                    </div>
-                    <div class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                            <h4>Praca zespołowa</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Dobrze odnajduje się w pracy zesołowej. Uważam, że wymiana opinii grupy osób pozwala
-                                osiągnąć
-                                najlepsze efekty dla danego projektu.</p>
-                        </div>
-                    </div>
-                    <div class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/message-circle.svg" alt="">
-                            <h4>Komunikacja<h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Jestem osobą otwartą i łatwo nawiązującą kontakty z innymi. Co sprawia, że czuję się
-                                swobodnie zarówno w interakcjach z klientami, jak i w codziennej współpracy z zespołem.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                            <h4>Rozwiązywanie problemów</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Nie szukam problemów, szukam rozwiązań. Problemy to integralna część każdej pracy.
-                                Dlatego tak ważne jest by umieć sobie z nimi radzić i szukać alternatywnych rozwiązań.
-                            </p>
-                        </div>
-                    </div>
-            </section> -->
             <section class="resume__education section-padding">
                 <h2 class="section-title">wykształcenie</h2>
                 <div class="resume__education-box">
