added one line of text into HTML, CSS skill

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <h4>HTML, CSS</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Swobodnie posługuję się HTML i CSS. Metody DRY, RWD oraz pojęcia takie jak Flex, GRID,
+                            <p>Swobodnie posługuję się HTML i CSS. Dbam o czystość kodu i jego poprawną strukturę. Metody DRY, RWD oraz pojęcia takie jak Flex, GRID,
                                 BootStrap, SASS, BEM są mi dobrze znane.</p>
                         </div>
                     </li>
