--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <div class="wrapper">
         <div class="resume">
             <section class="resume__header section-padding">
+                <div class="resume__header-buttons">
+                    <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
+                    <button class="btn-language"><i class="fa-solid fa-language"></i></button>
+                    <button class="btn-github"><i class="fa-brands fa-square-github"></i></button>
+                </div>
                 <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
                 <div class="resume__header-text">
                     <h1>Mateusz Jabłoński</h1>
