changed two buttons for a tag

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <section class="resume__header section-padding">
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
-                    <button class="btn-language"><i class="fa-solid fa-language"></i></button>
-                    <button class="btn-github"><i class="fa-brands fa-square-github"></i></button>
+                    <a class="btn-language"><i class="fa-solid fa-language"></i></a>
+                    <a class="btn-github"><i class="fa-brands fa-square-github"></i></a>
                 </div>
                 <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
                 <div class="resume__header-text">
