made resume in polish in english

--- a/resume.html
+++ b/resume.html
@@ -20,8 +20,9 @@
             <section class="resume__header section-padding">
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
-                    <a href="" class="btn-language"><i class="fa-solid fa-language"></i></a>
-                    <a href="https://github.com/Junioru96" class="btn-github"><i class="fa-brands fa-square-github"></i></a>
+                    <a href="cv.html" class="btn-language"><i class="fa-solid fa-language"></i></a>
+                    <a href="https://github.com/Junioru96" class="btn-github"><i
+                            class="fa-brands fa-square-github"></i></a>
 
                 </div>
                 <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
@@ -35,35 +36,38 @@
                 </div>
             </section>
             <section class="resume__experience section-padding">
-                <h2 class="section-title">doświadczenie</h2>
+                <h2 class="section-title">experience</h2>
                 <div class="resume__experience-box">
                     <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Rossmann
-                        SDP. - Pracownik Działu Wewnętrznego Rewizji </p>
+                        SDP. - Internal Audit Department Employee </p>
                     <p class="resume__experience-date">2019/10 - obecnie</p>
                     <ul>
-                        <li>Administrowanie systemami alarmowymi, optymalizacja działania i wdrażanie narzędzi do usprawniania procesów.</li>
-                        <li>Realizacja projektów informatycznych oraz logistycznych we spółpracy z innymi działami w celu rozwoju systemów.</li>
-                        <li>Bieżący kontakt z dostawcami usług i firmami serwisowymi.</li>
-                        <li>Szkolenie pracowników w obsłudze programów i systemów.</li>
+                        <li>Managing alarm systems, optimizing performance, and implementing tools to improve processes.
+                        </li>
+                        <li>Leading IT and logistics projects in cooperation with other departments to enhance systems.
+                        </li>
+                        <li>Regular communication with service providers and maintenance companies.</li>
+                        <li>Training employees on software and system usage.</li>
                     </ul>
                 </div>
                 <div class="resume__experience-box">
-                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer - Doradca Klienta </p>
+                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer - Customer Advisor
+                    </p>
                     <p class="resume__experience-date">2017/10 - 2019/01</p>
                 </div>
             </section>
             <section class="resume__skills section-padding">
                 <h2 class="section-title">Umiejętności</h2>
                 <ul class="resume__skills-list"">
-                    <li class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/code-dots.svg" alt="">
-                            <h4>HTML, CSS</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Swobodnie posługuję się HTML i CSS. Dbam o czystość kodu i jego poprawną strukturę. Metody DRY, RWD oraz pojęcia takie jak Flex, GRID,
-                                BootStrap, SASS, BEM są mi dobrze znane.</p>
-                        </div>
+                    <li class=" resume__skills-box">
+                    <div class="resume__skills-box-title">
+                        <img src="/img/icons/code-dots.svg" alt="">
+                        <h4>HTML, CSS</h4>
+                    </div>
+                    <div class="resume__skills-box-text">
+                        <p>Proficient in HTML and CSS, maintaining clean and well-structured code. Familiar with DRY,
+                            RWD, and concepts such as Flex, GRID, Bootstrap, SASS, and BEM.</p>
+                    </div>
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
@@ -71,8 +75,8 @@
                             <h4>JavaScript</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Mam podstawową znajomość JavaScript, która pozwala mi tworzyć skrypty i dodawać
-                                funkcjonalności na stronach internetowych.</p>
+                            <p>Basic knowledge of JavaScript, allowing me to create scripts and add functionality to
+                                websites.</p>
                         </div>
                     </li>
                     <li class="resume__skills-box">
@@ -81,65 +85,67 @@
                             <h4>AI</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Optymalizuję pracę przy użyciu AI, od generowania treści po automatyzację zadań.</p>
+                            <p>I optimize work using AI, from content generation to task automation.</p>
                         </div>
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
                             <img src="/img/icons/groups_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                            <h4>Praca zespołowa</h4>
+                            <h4>Teamwork</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Doskonale odnajduję się w pracy zespołowej. Współpraca pozwala osiągnąć najlepsze efekty.</p>
+                            <p>I am a team person. Working together allows me to achieve the best results.</p>
                         </div>
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
                             <img src="/img/icons/message-circle.svg" alt="">
-                            <h4>Komunikacja</h4>
+                            <h4>Communication</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Jestem osobą otwartą, łatwo nawiązującą kontakty z innymi, co ułatwia codzienną współpracę.</p>
+                            <p>An open and approachable person, easily building connections with others, which supports
+                                daily team interactions.</p>
                         </div>
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
                             <img src="/img/icons/sync_problem_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                            <h4>Rozwiązywanie problemów</h4>
+                            <h4>Problem Solving</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Skupiam się na rozwiązaniach, zamiast na problemach, szukając alternatywnych opcji.</p>
+                            <p>Focus on finding solutions rather than dwelling on issues, always looking for alternative
+                                options.
+                            </p>
                         </div>
                     </li>
                 </ul>
             </section>
             <section class="resume__education section-padding">
-                <h2 class="section-title">wykształcenie</h2>
+                <h2 class="section-title">education</h2>
                 <div class="resume__education-box">
-                    <p class="resume__education-school"><i class="fa-solid fa-graduation-cap"></i>Mundurowe Liceum
-                        Ogólnokształcące</p>
+                    <p class="resume__education-school"><i class="fa-solid fa-graduation-cap"></i>Uniformed High School</p>
                     <p class="resume__education-date">2014 - 2017</p>
                 </div>
             </section>
-            
+
             <section class="resume__interests section-padding">
                 <h2 class="section-title">zainteresowania</h2>
                 <div class="resume__interests-container">
                     <div class="resume__interests-box">
                         <img src="/img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                        <p>Gry komputerowe</p>
+                        <p>Computer Games</p>
                     </div>
                     <div class="resume__interests-box">
                         <img src="/img/icons/mountain.svg" alt="">
-                        <p>Wspinaczka skałkowa</p>
+                        <p>Rock Climbing</p>
                     </div>
                     <div class="resume__interests-box">
                         <img src="/img/icons/monitoring_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                        <p>Rynki finansowe</p>
+                        <p>Financial Markets</p>
                     </div>
                     <div class="resume__interests-box">
                         <img src="/img/icons/tank.svg" alt="">
-                        <p>Militaria</p>
+                        <p>Military</p>
                     </div>
                 </div>
             </section>
