--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
             <section class="resume__header section-padding">
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
-                    <a href="" class="btn-language"><i class="fa-solid fa-language"></i></a>
+                    <a href="resume.html" class="btn-language"><i class="fa-solid fa-language"></i></a>
                     <a href="https://github.com/Junioru96" class="btn-github"><i class="fa-brands fa-square-github"></i></a>
 
                 </div>
