added target blank to a tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
                     <a href="" class="btn-language"><i class="fa-solid fa-language"></i></a>
-                    <a href="https://github.com/Junioru96" class="btn-github"><i class="fa-brands fa-square-github"></i></a>
+                    <a href="https://github.com/Junioru96" target="_blank" class="btn-github"><i
+                            class="fa-brands fa-square-github"></i></a>
 
                 </div>
                 <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
@@ -41,29 +42,33 @@
                         SDP. - Pracownik Działu Wewnętrznego Rewizji </p>
                     <p class="resume__experience-date">2019/10 - obecnie</p>
                     <ul>
-                        <li>Administrowanie systemami alarmowymi, optymalizacja działania i wdrażanie narzędzi do usprawniania procesów.</li>
-                        <li>Realizacja projektów informatycznych oraz logistycznych we spółpracy z innymi działami w celu rozwoju systemów.</li>
+                        <li>Administrowanie systemami alarmowymi, optymalizacja działania i wdrażanie narzędzi do
+                            usprawniania procesów.</li>
+                        <li>Realizacja projektów informatycznych oraz logistycznych we spółpracy z innymi działami w
+                            celu rozwoju systemów.</li>
                         <li>Bieżący kontakt z dostawcami usług i firmami serwisowymi.</li>
                         <li>Szkolenie pracowników w obsłudze programów i systemów.</li>
                     </ul>
                 </div>
                 <div class="resume__experience-box">
-                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer - Doradca Klienta </p>
+                    <p class="resume__experience-company"><i class="fa-solid fa-briefcase"></i>Sizeer - Doradca Klienta
+                    </p>
                     <p class="resume__experience-date">2017/10 - 2019/01</p>
                 </div>
             </section>
             <section class="resume__skills section-padding">
                 <h2 class="section-title">Umiejętności</h2>
                 <ul class="resume__skills-list"">
-                    <li class="resume__skills-box">
-                        <div class="resume__skills-box-title">
-                            <img src="/img/icons/code-dots.svg" alt="">
-                            <h4>HTML, CSS</h4>
-                        </div>
-                        <div class="resume__skills-box-text">
-                            <p>Swobodnie posługuję się HTML i CSS. Dbam o czystość kodu i jego poprawną strukturę. Metody DRY, RWD oraz pojęcia takie jak Flex, GRID,
-                                BootStrap, SASS, BEM są mi dobrze znane.</p>
-                        </div>
+                    <li class=" resume__skills-box">
+                    <div class="resume__skills-box-title">
+                        <img src="/img/icons/code-dots.svg" alt="">
+                        <h4>HTML, CSS</h4>
+                    </div>
+                    <div class="resume__skills-box-text">
+                        <p>Swobodnie posługuję się HTML i CSS. Dbam o czystość kodu i jego poprawną strukturę. Metody
+                            DRY, RWD oraz pojęcia takie jak Flex, GRID,
+                            BootStrap, SASS, BEM są mi dobrze znane.</p>
+                    </div>
                     </li>
                     <li class="resume__skills-box">
                         <div class="resume__skills-box-title">
@@ -90,7 +95,8 @@
                             <h4>Praca zespołowa</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Doskonale odnajduję się w pracy zespołowej. Współpraca pozwala osiągnąć najlepsze efekty.</p>
+                            <p>Doskonale odnajduję się w pracy zespołowej. Współpraca pozwala osiągnąć najlepsze efekty.
+                            </p>
                         </div>
                     </li>
                     <li class="resume__skills-box">
@@ -99,7 +105,8 @@
                             <h4>Komunikacja</h4>
                         </div>
                         <div class="resume__skills-box-text">
-                            <p>Jestem osobą otwartą, łatwo nawiązującą kontakty z innymi, co ułatwia codzienną współpracę.</p>
+                            <p>Jestem osobą otwartą, łatwo nawiązującą kontakty z innymi, co ułatwia codzienną
+                                współpracę.</p>
                         </div>
                     </li>
                     <li class="resume__skills-box">
@@ -121,7 +128,7 @@
                     <p class="resume__education-date">2014 - 2017</p>
                 </div>
             </section>
-            
+
             <section class="resume__interests section-padding">
                 <h2 class="section-title">zainteresowania</h2>
                 <div class="resume__interests-container">
