--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/299bf75cea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Mateusz_Jabłoński_CV</title>
+    <title>Mateusz_Jabłoński_Resume</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
                     <a href="cv.html" class="btn-language"><i class="fa-solid fa-language"></i></a>
-                    <a href="https://github.com/Junioru96" class="btn-github"><i
+                    <a href="https://github.com/Junioru96" target="_blank" class="btn-github"><i
                             class="fa-brands fa-square-github"></i></a>
 
                 </div>
