--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
                 <div class="resume__header-buttons">
                     <button class="btn-pdf"><i class="fa-solid fa-file-pdf"></i></button>
                     <a href="resume.html" class="btn-language"><i class="fa-solid fa-language"></i></a>
-                    <a href="https://github.com/Junioru96" class="btn-github"><i class="fa-brands fa-square-github"></i></a>
+                    <a href="https://github.com/Junioru96" target="_blank" class="btn-github"><i class="fa-brands fa-square-github"></i></a>
 
                 </div>
                 <img src="/img/cv.jpg" alt="Zdjęcie CV" class="resume__header-img">
