--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
                 </div>
             </section>
             <section class="resume__skills section-padding">
-                <h2 class="section-title">Umiejętności</h2>
+                <h2 class="section-title">skills</h2>
                 <ul class="resume__skills-list"">
                     <li class=" resume__skills-box">
                     <div class="resume__skills-box-title">
@@ -129,7 +129,7 @@
             </section>
 
             <section class="resume__interests section-padding">
-                <h2 class="section-title">zainteresowania</h2>
+                <h2 class="section-title">interests</h2>
                 <div class="resume__interests-container">
                     <div class="resume__interests-box">
                         <img src="/img/icons/stadia_controller_24dp_000_FILL0_wght400_GRAD0_opsz24.svg" alt="">
