--- a/resume.html
+++ b/resume.html
@@ -149,6 +149,7 @@
                     </div>
                 </div>
             </section>
+            <script src="/js/main.js"></script>
         </div>
     </div>
 
